# nova

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
api/: README.md  main.py  pyproject.toml  requirements.txt  seed.py
api/utils/: config.py  database.py  deps.py  hash.py  jwt.py  models.py
api/utils/routes/: auth.py  cards.py  grids.py
src/: App.css  App.tsx  main.tsx  types.ts
src/components/: Canvas.tsx  Card.tsx  MainCanvas.tsx  ProtectedRoute.tsx  Sidebar.tsx
src/pages/: Login.tsx  Signup.tsx
